envoy-opa/headerecho-and-envoy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headerecho-envoy
  name: headerecho-envoy
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31111
    port: 4003
    protocol: TCP
    targetPort: 4000
  selector:
    app: headerecho-envoy
  sessionAffinity: None
  type: LoadBalancer
